ПРОГРЕСС: M.I.L.K иконка + Overview метрики + сортировка Campaigns
🥛 БРЕНДИНГ:
- Название вкладки браузера: M.I.L.K
- Иконка молока в SVG формате
- Убраны полукруглые линии в сайдбаре

📊 OVERVIEW МЕТРИКИ:
- CPC заменён на Total Revenue (зеленый)
- Conversion Rate заменён на Total Actions (синий)
- Правильные вычисления из данных

🔄 СОРТИРОВКА CAMPAIGNS:
- Добавлена сортировка по всем колонкам
- Target App, Impressions, Clicks, ROAS, Revenue, Actions
- Все с иконками сортировки

⏳ СЛЕДУЮЩЕЕ: сортировка в остальных таблицах + креативы moves

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>revenueflow-next</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>M.I.L.K</title>
+    <meta name="description" content="Moloco Intelligence & Learning Kit" />
+    <meta name="author" content="M.I.L.K" />
+    <link rel="icon" type="image/svg+xml" href="/milk-icon.svg" />
 
     <meta property="og:title" content="revenueflow-next" />
     <meta property="og:description" content="Lovable Generated Project" />
